# cwill_keyboard

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.h  main.c
.cache/clangd/index/: btstack_config.h.90C3271E366A6D10.idx  hid_keyboard_demo.c.117834223B1A5E41.idx  main.c.6B21D36DE827B2CB.idx
.devcontainer/: devcontainer.json
modules/led/: CMakeLists.txt
pcb/keyboard/: keyboard.kicad_pro  keyboard.kicad_sch  sym-lib-table  untitled.kicad_sch
src/: FreeRTOSConfig.h  keyboard_tasks.h
tasks/: task_led.c  tasks.h
